Fix log dashboard fullscreen display and z-index

--- a/frontend/src/components/experimenter/log_dashboard.scss
+++ b/frontend/src/components/experimenter/log_dashboard.scss
@@ -76,9 +76,9 @@ code {
 
 /* Modal */
 .modal {
-  display: none;
+  display: block;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   top: 0;
   left: 0;
   width: 100%;
